Add java compiler options for optimal hazelcast