@@ -49,6 +49,26 @@ run {
 ext.sourceCompatibility = JavaVersion.VERSION_11
 ext.targetCompatibility = JavaVersion.VERSION_11
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs+= [ "--add-modules java.se",
+                             "--add-exports java.base/jdk.internal.ref=ALL-UNNAMED",
+                             "--add-opens java.base/java.lang=ALL-UNNAMED",
+                             "--add-opens java.base/java.nio=ALL-UNNAMED",
+                             "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
+                             "--add-opens java.management/sun.management=ALL-UNNAMED",
+                             "--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+tasks.withType(Test) {
+    options.compilerArgs+= [ "--add-modules java.se",
+                             "--add-exports java.base/jdk.internal.ref=ALL-UNNAMED",
+                             "--add-opens java.base/java.lang=ALL-UNNAMED",
+                             "--add-opens java.base/java.nio=ALL-UNNAMED",
+                             "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
+                             "--add-opens java.management/sun.management=ALL-UNNAMED",
+                             "--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
         jvmTarget = "1.8"
